# Backend

./: .editorconfig  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  config.py
app/auth/: jwt_token.py  oauth2.py  roles.py
app/core/: __init__.py  exceptions.py  mongo_session.py  redis_session.py
app/routers/: __init__.py
app/routers/auth/: __init__.py  router.py  schemas.py
app/routers/issue/: __init__.py  router.py  schemas.py
app/routers/sprint/: __init__.py  router.py  schemas.py
app/routers/user_assigned_issue/: __init__.py  router.py  schemas.py
app/routers/userassignedworkplace/: __init__.py  schemas.py
app/routers/workplace/: __init__.py  router.py  schemas.py
